[gd_scene load_steps=12 format=3 uid="uid://bl1qohwo88hfc"]

[ext_resource type="Script" path="res://scenes/guis/scripts/main_menu.gd" id="1_8hnww"]
[ext_resource type="FontFile" uid="uid://cm2736hy813yx" path="res://assets/guis/MesloLGS NF Bold.ttf" id="2_14cub"]
[ext_resource type="Texture2D" uid="uid://dco05d8fr4843" path="res://assets/guis/play_normal.png" id="3_mdmkr"]
[ext_resource type="Texture2D" uid="uid://c3vj1ymtfnnwv" path="res://assets/guis/play_hover.png" id="4_g65q3"]
[ext_resource type="Texture2D" uid="uid://qjp8b5bv26xf" path="res://assets/guis/controls_normal.png" id="5_jdwur"]
[ext_resource type="Texture2D" uid="uid://dxd106g3bc0u0" path="res://assets/guis/controls_hover.png" id="6_djbmr"]
[ext_resource type="Texture2D" uid="uid://4nv6gqnh3jef" path="res://assets/guis/options_normal.png" id="7_c7hxq"]
[ext_resource type="Texture2D" uid="uid://dvugxyaqtgfpn" path="res://assets/guis/options_hover.png" id="8_xpxmc"]
[ext_resource type="Texture2D" uid="uid://hyacay78kd0t" path="res://assets/guis/cover_image.png" id="9_mj6xr"]

[sub_resource type="Theme" id="Theme_ig56b"]

[sub_resource type="LabelSettings" id="LabelSettings_ko1ha"]
font = ExtResource("2_14cub")
font_size = 216
font_color = Color(0.243137, 0.521569, 0.843137, 1)
outline_size = 40
outline_color = Color(0.243137, 0.521569, 0.843137, 0.356863)
shadow_offset = Vector2(-8, 8)

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8hnww")

[node name="Main" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 96
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="TitleAndButtons" type="VBoxContainer" parent="Main"]
layout_mode = 2
theme = SubResource("Theme_ig56b")
theme_override_constants/separation = 64

[node name="Title" type="Label" parent="Main/TitleAndButtons"]
layout_mode = 2
text = "BLOCKIES"
label_settings = SubResource("LabelSettings_ko1ha")
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Main/TitleAndButtons"]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Main/TitleAndButtons/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="StartContainer" type="CenterContainer" parent="Main/TitleAndButtons/CenterContainer/Buttons"]
layout_mode = 2

[node name="Play" type="TextureButton" parent="Main/TitleAndButtons/CenterContainer/Buttons/StartContainer"]
layout_mode = 2
texture_normal = ExtResource("3_mdmkr")
texture_pressed = ExtResource("4_g65q3")
texture_hover = ExtResource("4_g65q3")
texture_focused = ExtResource("4_g65q3")

[node name="ControlsContainer" type="CenterContainer" parent="Main/TitleAndButtons/CenterContainer/Buttons"]
layout_mode = 2

[node name="Controls" type="TextureButton" parent="Main/TitleAndButtons/CenterContainer/Buttons/ControlsContainer"]
layout_mode = 2
texture_normal = ExtResource("5_jdwur")
texture_pressed = ExtResource("6_djbmr")
texture_hover = ExtResource("6_djbmr")
texture_focused = ExtResource("6_djbmr")

[node name="OptionsContainer" type="CenterContainer" parent="Main/TitleAndButtons/CenterContainer/Buttons"]
layout_mode = 2

[node name="Options" type="TextureButton" parent="Main/TitleAndButtons/CenterContainer/Buttons/OptionsContainer"]
layout_mode = 2
texture_normal = ExtResource("7_c7hxq")
texture_pressed = ExtResource("8_xpxmc")
texture_hover = ExtResource("8_xpxmc")
texture_focused = ExtResource("8_xpxmc")

[node name="CoverArt" type="TextureRect" parent="Main"]
modulate = Color(1, 1, 1, 0.733333)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("9_mj6xr")
stretch_mode = 2

[connection signal="pressed" from="Main/TitleAndButtons/CenterContainer/Buttons/StartContainer/Play" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main/TitleAndButtons/CenterContainer/Buttons/ControlsContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Main/TitleAndButtons/CenterContainer/Buttons/OptionsContainer/Options" to="." method="_on_options_pressed"]
